# Solar

./: .clang-tidy  .gitignore  README.md  meson.build
.github/workflows/: c-cpp.yml
src/: global.h  main.cpp  types.h
src/commands/: commands.h  info.cpp  init.cpp  install.cpp
